--- a/Ready Touch example.vcxproj
+++ b/Ready Touch example.vcxproj
@@ -88,16 +88,13 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="images\20241114_064031.png" />
-    <Image Include="images\20241114_064103.png" />
-    <Image Include="images\20241114_064402.png" />
-    <Image Include="images\20241114_064433.png" />
-    <Image Include="images\20241114_064542.png" />
-    <Image Include="images\20241114_064623.png" />
-    <Image Include="images\20241114_083904.png" />
-    <Image Include="images\20241116_122627.png" />
+    <Image Include="images\PCB Top.png" />
+    <Image Include="images\Top case.png" />
+    <Image Include="images\Back connections.png" />
+    <Image Include="images\Desk L bracket.png" />
+    <Image Include="images\Wall mount.png" />
+    <Image Include="images\Front USBpng" />
     <Image Include="images\Bottom-Notes.jpg" />
-    <Image Include="images\Desktop.jpg" />
     <Image Include="images\PCB-Bottom.jpg" />
     <Image Include="images\Top-Notes.jpg" />
     <Image Include="images\Top.jpg" />
