--- a/Ready Touch example.vcxproj
+++ b/Ready Touch example.vcxproj
@@ -88,6 +88,7 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="images\AppExample.png" />
     <Image Include="images\PCB Top.png" />
     <Image Include="images\Top case.png" />
     <Image Include="images\Back connections.png" />
